fixed overflow

--- a/index.css
+++ b/index.css
@@ -164,8 +164,10 @@ body {
         z-index: 9;
         background-color: hsl(0, 0%, 100%);
         width: 100%;
-        height: 100vh;
-        overflow: auto;
+        top: 0;
+        bottom: 0;
+        overflow-x: hidden;
+        overflow-y: scroll;
         text-wrap: nowrap;
     }
 
